outputs_20260330-043333-00e0c486/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\include/IfxEgtm_Pwm.h:8,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:13:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\include/IfxPort.h:37:5: error: unknown type name 'IfxPort_PadSupply'
   37 |     IfxPort_PadSupply    padSupply;
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c: In function 'interruptEgtmAtomPeriod':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:30:37: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P21'?
   30 | #define LED                        &MODULE_P03, 9
      |                                     ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:69:23: note: in expansion of macro 'LED'
   69 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:30:37: note: each undeclared identifier is reported only once for each function it appears in
   30 | #define LED                        &MODULE_P03, 9
      |                                     ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:69:23: note: in expansion of macro 'LED'
   69 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:39:24: error: 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT' undeclared (first use in this function)
   39 | #define PHASE_U_LS   (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:99:62: note: in expansion of macro 'PHASE_U_LS'
   99 |     output[0].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS; /* low-side  */
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:138:26: error: 'IfxSrc_VmId_0' undeclared (first use in this function); did you mean 'IfxSrc_VmId'?
  138 |     irqCfg.vmId        = IfxSrc_VmId_0;
      |                          ^~~~~~~~~~~~~
      |                          IfxSrc_VmId
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:139:24: error: assignment to 'IfxEgtm_Pwm_callBack' {aka 'void (*)(void *)'} from incompatible pointer type 'void (*)(void)' [-Wincompatible-pointer-types]
  139 |     irqCfg.periodEvent = interruptEgtmAtomPeriod;
      |                        ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:67:6: note: 'interruptEgtmAtomPeriod' declared here
   67 | void interruptEgtmAtomPeriod(void)
      |      ^~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\include/IfxEgtm_Pwm.h:13:16: note: 'IfxEgtm_Pwm_callBack' declared here
   13 | typedef void (*IfxEgtm_Pwm_callBack)(void *arg);
      |                ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:30:37: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P21'?
   30 | #define LED                        &MODULE_P03, 9
      |                                     ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\src\egtm_atom_3_phase_inverter_pwm.c:211:30: note: in expansion of macro 'LED'
  211 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |                              ^~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\include/IfxEgtm_Pwm.h:8,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:5:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\include/IfxPort.h:37:5: error: unknown type name 'IfxPort_PadSupply'
   37 |     IfxPort_PadSupply    padSupply;
      |     ^~~~~~~~~~~~~~~~~

C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\test\test_egtm_atom_3_phase_inverter_pwm.c: In function 'test_TC_G4_001_isr_toggle_once':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_drxq7ujw\test\test_egtm_atom_3_phase_inverter_pwm.c:144:5: error: implicit declaration of function 'interruptEgtmAtomPeriod' [-Wimplicit-function-declaration]
  144 |     interruptEgtmAtomPeriod();
      |     ^~~~~~~~~~~~~~~~~~~~~~~
